fix wrap

--- a/home.css
+++ b/home.css
@@ -98,8 +98,6 @@ h1 {
 }
 .flex {
     display: flex;
-    flex-direction: row;
-    flex-wrap:nowrap;
     width: 90%;
     margin-left: 5%;
     margin-bottom: 5%;
